outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_00-23-35/evaluations/problem_eval-8614484970754448461_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    important later (using a weight that increases with tour progression). It also incorporates a destination-aware component by adjusting centrality scores based on the destination's proximity, ensuring the tour remains focused on the final destination while balancing local and global optimization.}
                                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    important later (using a weight that increases with tour progression). It also incorporates a destination-aware component by adjusting centrality scores based on the destination's proximity, ensuring the tour remains focused on the final destination while balancing local and global optimization.}
                                                                                                                                                                                     ^
SyntaxError: unterminated string literal (detected at line 1)
